[tool.poetry]
name = 'pytest-lambda'
version = "1.2.0"
description = 'Define pytest fixtures with lambda functions.'
license = 'MIT'

authors = [
    'Zach "theY4Kman" Kanzler <they4kman@gmail.com>'
]

readme = 'README.md'

repository = 'https://github.com/theY4Kman/pytest-lambda'
homepage = 'https://github.com/theY4Kman/pytest-lambda'

keywords = ['pytest']
classifiers=[
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python',
    'Framework :: Pytest',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Testing',
]


[tool.poetry.dependencies]
# Typing annotations are used
# XXX: for whatever reason, poetry doesn't like `>=3.6` — the additional pin allows locking to work
python = '^3.6, >= 3.6'

pytest = '>=3.6, <6.1'
wrapt = '^1.11.0'


[tool.poetry.dev-dependencies]
tox = "^3.12"
pytest-markdown = "^0.0.7"


[tool.poetry.plugins."pytest11"]
lambda = "pytest_lambda.plugin"


[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
