[tool.poetry]
name = 'pytest-lambda'
version = "2.2.0"
description = 'Define pytest fixtures with lambda functions.'
license = 'MIT'

authors = [
    'Zach "theY4Kman" Kanzler <they4kman@gmail.com>'
]

readme = 'README.md'

repository = 'https://github.com/theY4Kman/pytest-lambda'
homepage = 'https://github.com/theY4Kman/pytest-lambda'

keywords = ['pytest']
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Framework :: Pytest',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Testing',
]


[tool.poetry.dependencies]
# Typing annotations are used
# XXX: for whatever reason, poetry doesn't like `>=3.7` — the additional pin allows locking to work
python = '^3.7.0, >= 3.7.0'

pytest = '>=3.6, <8'
typing-extensions = { version = '^4.2.0', python = '<=3.7' }
wrapt = '^1.11.0'


[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest-asyncio = "*"
pytest-markdown = "*"
tox = "^3.12"


[tool.poetry.plugins."pytest11"]
lambda = "pytest_lambda.plugin"


[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
